syntax = "proto3";

package authpb;

service AuthService {
    rpc CheckServerStatus(CheckServerStatusRequest) returns (CheckServerStatusResponse);
}

message CheckServerStatusRequest{}

message CheckServerStatusResponse{
    string server_name = 1;
    string host = 2;
    string port = 3;
    string time = 4;
    string status = 5;
}